<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/backgroundimage">


    <ScrollView
        android:id="@+id/scrollView2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="10">

            <ImageView
                android:id="@+id/textGrid"
                android:layout_width="match_parent"
                android:layout_height="180dp"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="0dp"
                android:fontFamily="serif"
                android:gravity="center"
                android:padding="20dp"
                android:src="@drawable/applogo"
                android:tint="#ffff" />

            <GridLayout
                android:id="@+id/mainGrid"
                android:layout_width="match_parent"
                android:layout_height="0dp"

                android:layout_weight="10"
                android:alignmentMode="alignMargins"
                android:columnCount="2"
                android:columnOrderPreserved="false"
                android:padding="6dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/Card_attractions"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:onClick="onclick"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#A8A8A8"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_gravity="top"
                            android:src="@drawable/attractions_ico" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="@string/attractions"
                            android:textColor="#464646"
                            android:textSize="15dp"
                            android:textStyle="bold" />
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/Card_Musems"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_columnWeight="1"
                    android:onClick="onclick"
                    android:layout_marginLeft="16dp"
                    android:layout_marginRight="16dp"
                    android:layout_marginBottom="16dp"
                    android:background="#ffff"
                    app:cardCornerRadius="4dp"
                    app:cardElevation="1dp">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal|center_vertical"
                        android:layout_margin="10dp"
                        android:orientation="vertical">

                        <ImageView
                            android:layout_width="130dp"
                            android:layout_height="100dp"
                            android:layout_gravity="top"
                            android:src="@drawable/musem_ico" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:fontFamily="serif"
                            android:gravity="center"
                            android:text="@string/museums"
                            android:textColor="#464646"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>




            </GridLayout>

            <androidx.cardview.widget.CardView

                android:id="@+id/Card_Park"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="onclick"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="100dp"
                        android:layout_gravity="top"
                        android:padding="10dp"
                        android:src="@drawable/parks_ico" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:text="@string/parks_and_green_spaces"
                        android:textColor="#464646"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView

                android:id="@+id/Card_Logout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:onClick="onclick"
                android:layout_marginBottom="16dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:layout_margin="10dp"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:layout_gravity="top"
                        android:padding="10dp"
                        android:src="@drawable/logout_ico" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="serif"
                        android:gravity="center"
                        android:text="@string/log_out"
                        android:textColor="#464646"
                        android:textSize="15dp"
                        android:textStyle="bold" />

                </LinearLayout>
            </androidx.cardview.widget.CardView>


        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/txtisAdmin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Logged In As Admin"
        android:layout_marginStart="10dp"
        android:visibility="gone"
        android:textSize="20dp"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="@+id/scrollView2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />



    <TextView
        android:id="@+id/txtWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="Welcome : "
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>